# shortener

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .rest  404.html  CNAME  CONTRIBUTING.md  Cargo.toml  Makefile  QUICK_REFERENCE.md  README.md  docker-bake.hcl  index.html  justfile  mkdocs.yml  openapi.yml  prek.toml  requirements.txt  sitemap.xml
.agents/skills/semi-ui-skills/: BEST_PRACTICES.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: docker-dev.yml  docker-frontend-dev.yml  docker-release-frontend.yml  docker-release-server-alpine.yml  docker-release-server-debian.yml  docker-release.yml  docker-server-dev-alpine.yml  docker-server-dev.yml  docs.yml  frontend-ci.yml  release-frontend.yml  release-server.yml  release.yml
.kiro/hooks/: chinese-response-hook.kiro.hook
CONTRIBUTING/: index.html
PROJECT_README/: index.html
QUICK_REFERENCE/: index.html
cli/: index.html
cli/CLI/: index.html
cli/USAGE/: index.html
common/: index.html
config/: .env.example  config.development.toml  config.docker.toml  config.example.toml  config.production.toml  config.test-new.toml  config.toml  test-config.toml
deploy/systemd/: install.sh  shortener-server.service  uninstall.sh
deployment/: index.html
deployment/BUILD_DEB/: index.html
deployment/CROSS_COMPILE/: index.html
deployment/DEB_PACKAGING_SIMPLIFIED/: index.html
deployment/DEPLOYMENT/: index.html
deployment/DOCKER/: index.html
deployment/DOCKER_ADVANCED/: index.html
deployment/DOCKER_FRONTEND/: index.html
deployment/DOCKER_FULL/: index.html
deployment/SYSTEMD/: index.html
docker/: Cross.toml  Dockerfile  Dockerfile.alpine  Dockerfile.demo  Dockerfile.demo-alpine  Dockerfile.frontend  docker-compose.dev.yml  docker-compose.frontend.yml  docker-compose.yml  nginx.conf
docs/: API.md  CONFIGURATION.md  DEB_PACKAGING.md  DEB_PACKAGING_SIMPLIFIED.md  DEPLOYMENT.md  DOCKER.md  INSTALLATION.md  PROJECT_README.md  README.md  index.md
docs/cli/: CLI.md  README.md  USAGE.md
docs/common/: README.md
docs/deployment/: BUILD_DEB.md  DEB_PACKAGING_SIMPLIFIED.md  DOCKER.md  DOCKER_ADVANCED.md  DOCKER_FRONTEND.md  README.md  SYSTEMD.md
docs/frontend/: COMPONENTS.md  DEPLOYMENT.md  README.md
docs/general/: CONFIGURATION.md  CONFIG_FILES.md  GEOIP.md  README.md
docs/server/: API.md  BENCHMARKS.md  README.md
docs/stylesheets/: extra.css
frontend/: index.html
frontend/COMPONENTS/: index.html
frontend/DEPLOYMENT/: index.html
general/: index.html
general/CONFIGURATION/: index.html
general/CONFIG_FILES/: index.html
general/GEOIP/: index.html
general/INSTALLATION/: index.html
scripts/: CROSS_COMPILE.md  build-cross.sh  build-docs.sh  check-docs-links.sh  install.sh  postinstall.sh  postremove.sh  preinstall.sh  preremove.sh  view-docs.sh
search/: search_index.json
server/: index.html
server/API/: index.html
server/BENCHMARKS/: index.html
server/CONFIG/: index.html
shortener-cli/: Cargo.toml  README.md
shortener-cli/src/: client.rs  config.rs  main.rs
shortener-common/: Cargo.toml  README.md
shortener-common/src/: errors.rs  lib.rs  types.rs
shortener-frontend/: .env  .env.development  .gitignore  README.md  eslint.config.js  index.html  jest.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
shortener-frontend/config/: openapi.json  theme.ts
shortener-frontend/src/: App.tsx  global.css  main.tsx  manifest.json  typings.d.ts  vite-env.d.ts
shortener-frontend/src/__tests__/: visual-regression.test.tsx
shortener-frontend/src/components/: index.ts
shortener-frontend/src/constants/: index.ts
shortener-frontend/src/hooks/: useAuth.ts  usePerformance.ts
shortener-frontend/src/layouts/: MainLayout.tsx
shortener-server/: CONFIG.md  Cargo.toml  README.md
shortener-server/benches/: cache_bench.rs  code_generation_bench.rs  database_bench.rs  service_bench.rs  url_validation_bench.rs
shortener-server/src/: config.rs  db.rs  errors.rs  lib.rs  main.rs  router.rs
shortener-server/src/cache/: mod.rs  null_cache.rs  redis_cache.rs  valkey_cache.rs
shortener-server/src/geoip/: ERROR_HANDLING.md  README.md  ip2region.rs  mod.rs
shortener-server/src/handlers/: README.md  account.rs  history.rs  mod.rs  shorten.rs
shortener-server/src/logging/: README.md  mod.rs
shortener-server/src/middleware/: README.md  api_key_auth.rs  error_handler.rs  hybrid_auth.rs  jwt_auth.rs  logging.rs  mod.rs
shortener-server/src/migration/: m20240101_000001_create_urls_table.rs  m20240101_000002_create_histories_table.rs  mod.rs
shortener-server/src/models/: history.rs  mod.rs  url.rs
shortener-server/src/repositories/: history_repository.rs  mod.rs  url_repository.rs
shortener-server/src/services/: history_service.rs  mod.rs  shorten_service.rs
shortener-server/tests/: api_integration_test.rs  cache_test.rs  compatibility_test.rs  geoip_error_handling_test.rs  integration_test.rs
(+37 files in other folders)
