[workspace]
members = ["shortener-server", "shortener-cli", "shortener-common"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Jetsung Chan <i@jetsung.com>"]
license = "Apache-2.0"
repository = "https://github.com/jetsung/shortener"

[workspace.dependencies]
# Web 框架
axum = "0.8"
tokio = { version = "1.43", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 数据库
sea-orm = { version = "1.1", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "sqlx-mysql",
    "runtime-tokio-native-tls",
    "macros",
] }
sea-orm-migration = { version = "1.1", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "sqlx-mysql",
    "runtime-tokio-native-tls",
] }

# 缓存
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }

# 配置
config = "0.15"
toml = "0.9"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "time",
] }

# 错误处理
thiserror = "2.0"
anyhow = "1.0"

# CLI 框架
clap = { version = "4.5", features = ["derive", "env"] }

# HTTP 客户端
reqwest = { version = "0.12", features = ["json"] }

# 工具
rand = "0.9"
chrono = "0.4"
uuid = { version = "1.11", features = ["v4"] }

# 密码哈希
argon2 = "0.5"

# JWT
jsonwebtoken = "9.3"

# 配置目录
directories = "6.0"

# 表格输出
tabled = "0.20"

# 终端工具
crossterm = "0.29"

# 异步 trait
async-trait = "0.1"

# Futures utilities
futures-util = "0.3"

# GeoIP
ip2region = { git = "https://github.com/lionsoul2014/ip2region.git", branch = "master" }
